--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -6,7 +6,8 @@
      android:layout_width="match_parent"
     android:layout_height="wrap_content" android:padding="12dp"/>
      <ScrollView android:layout_width="match_parent"
-android:layout_height="0dp" android:layout_weight="1">
+                android:layout_height="0dp"
+                android:layout_weight="1">
  <LinearLayout android:id="@+id/container" android:orientation="vertical"
  android:layout_width="match_parent"
 android:layout_height="wrap_content"/>
