--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,12 +1,11 @@
-<resources>
-    <!-- Tema base de tu app -->
-    <style name="Theme.AppDelicia01" parent="Theme.Material3.DayNight">
-        <!-- colores/atributos -->
-    </style>
-
-    <!-- Variante sin barra para el Splash -->
-    <style name="Theme.AppDelicia01.NoActionBar" parent="Theme.AppDelicia01">
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
+<resources xmlns:tools="http://schemas.android.com/tools">
+    <style name="Theme.AppDelicia01" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+        <item name="colorPrimary">#6200EE</item>
+        <item name="colorPrimaryVariant">#3700B3</item>
+        <item name="colorOnPrimary">@android:color/white</item>
+        <item name="colorSecondary">#03DAC5</item>
+        <item name="colorSecondaryVariant">#018786</item>
+        <item name="colorOnSecondary">@android:color/black</item>
+        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
     </style>
 </resources>
